# vgdb_tools

./: .gitignore  compose.yml  download_auction_lic_from_rosnedra.py  energybase_ru.py  environment.yml  get_cad_num.py  kern_vnigni_ru.py  license_blocks_rfgf.py  links.vgjson  links_selected.vgjson  lotcards.sql  magnetic_calculator.py  magnetic_result.csv  main.py  morning_ex.py  parse_lands.qoldau.kz.py  parse_license_planning.py  pyproject.toml  refresh_dataset_links.py  requirements.txt  rosnedra.gpkg  run_jerks  run_rfgf  run_rfgf.py  run_rfgf_reports  run_rfgf_reports.py  run_rosnedra  run_rosnedra.py  run_rosnedra_auc_results.py  run_scada  run_scada.py  run_torgi  run_torgi.py  run_wialon  run_wialon_background.py  run_wialon_update.py  secret_files_list  smalltests.py  sql_scripts_to_initialize_schema.sql  synchro_evergis.py  (+13 more)
.devcontainer/: Dockerfile
data/: Auctions2023.csv  parse_license_planning.gpkg  subsoil.json
docker/compose/apache/: compose.yml
docker/compose/pygeoapi/: .env  compose.yml  my.config.yml
qgis_scripts/: compare_seismic.py  get_cad_num.py
rfgf_blocks/: rfgf_request_noFilter_300000.json
rosnedra_auc/: logfile.txt  rosnedra_result.gpkg
rosnedra_forecast/: rosnedra_forecast_conversion.xlsx
sbis/: ЗаявкаНаОплату.AttachList.json  ЗаявкаНаОплату.CommonList.json  образец_заявки.json
test_robot/: vgdb.vgjson
vgdb_bot/: Dockerfile
wialon/: event_example.json
